--- a/.github/workflows/deploy-stage.yaml
+++ b/.github/workflows/deploy-stage.yaml
@@ -2,8 +2,9 @@ name: "Deploy to GitHub Pages"
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
   deploy:
@@ -13,5 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup Node.js
         uses: actions/setup-node@v1
+        with:
+          node-version: "22"
       - name: Install dependencies
         run: cd web && yarn --frozen-lockfile
