--- a/web/package.json
+++ b/web/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:wasm": "cd ../wasm && wasm-pack build --target web --out-name wasm --out-dir ../web/wasm",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-ace": "^12.0.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "wasm": "./wasm"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
