--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://nilskch.github.io/monkeylang",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
