--- a/web/package.json
+++ b/web/package.json
@@ -3,10 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "/monkeylang",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build --base=/monkeylang/",
     "build:wasm": "cd ../wasm && wasm-pack build --target web --out-name wasm --out-dir ../web/wasm",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
