--- a/.github/workflows/deploy-stage.yaml
+++ b/.github/workflows/deploy-stage.yaml
@@ -1,8 +1,5 @@
-name: "Deploy to GitHub Pages"
-
-on:
-  push:
-    branches: ["main"]
+name: "CI/CD"
+on: push
 
 permissions:
   contents: read
@@ -10,7 +7,17 @@ permissions:
   id-token: write
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Cargo check
+        run: cargo check
+      - name: Cargo clippy
+        run: cargo clippy
+
   build:
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -32,6 +39,7 @@ jobs:
           path: ./web/dist
 
   deploy:
+    if: github.ref == 'refs/heads/main'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
